# linkdrop

./: .gitignore  pyproject.toml
src/linkdrop/: __init__.py  main.py
src/linkdrop/core/: config.py
