[project]
name = "linkdrop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Mohamed sallam", email = "sallamm733@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["fastapi[standard]>=0.136.0"]

[project.scripts]
linkdrop = "linkdrop:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=9.0.3", "pytest-cov>=7.1.0", "ruff>=0.15.11"]
